@@ -1,30 +1,29 @@
 package com.tzachz.commentcounter.apifacade;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Test;
 
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
+import java.util.Map;
+
+import static org.hamcrest.Matchers.*;
 import static org.junit.Assert.assertThat;
 
 public class EmojisMapTest {
 
     @Test
-    public void getLinkForExistingCodeReturnsMapValue() throws Exception {
-        EmojisMap emojisMap = new EmojisMap(ImmutableMap.of("key", "value"));
+    public void getLinkForExistingCodeReturnsMapValue() {
+        EmojisMap emojisMap = new EmojisMap(Map.of("key", "value"));
         assertThat(emojisMap.getLink("key"), is("value"));
     }
 
     @Test
-    public void getLinkForMissingValueReturnsNull() throws Exception {
-        EmojisMap emojisMap = new EmojisMap(ImmutableMap.of("key", "value"));
+    public void getLinkForMissingValueReturnsNull() {
+        EmojisMap emojisMap = new EmojisMap(Map.of("key", "value"));
         assertThat(emojisMap.getLink("missing"), nullValue());
     }
 
     @Test
-    public void getCodesReturnsKeySet() throws Exception {
-        EmojisMap emojisMap = new EmojisMap(ImmutableMap.of("key1", "value", "key2", "value"));
+    public void getCodesReturnsKeySet() {
+        EmojisMap emojisMap = new EmojisMap(Map.of("key1", "value", "key2", "value"));
         assertThat(emojisMap.getEmojiCodes(), containsInAnyOrder("key1", "key2"));
     }
 }
